# InferLLM

./: .gitignore  CMakeLists.txt  device.cpp  device.h  thread_pool.cpp  thread_pool.h  thread_pool_optimization.md
app/: chatglm.cpp  quantizer.cpp
app/chatglm/: convert.py
application/chatglm/: chatglm.cpp  chatglm_raw.cpp
docs/: introduce.md  run.txt
include/common/: file.h  utils.h  vocab.h
include/core/: device.h  graph.h  kvstorage.h  model.h  model_imp.h  module.h  op.h  tensor.h  thread_pool.h
include/graph/: chatGLM.h  ggml_llama.h  llama_like.h
include/kern/: kernel.h
include/kern/naive/: naive.h  quantize.hpp
include/kern/x86/: common.hpp  kernel.h
include/kernel/: kernel.h
include/kernel/cpu/: quantize.hpp
include/kernel/gpu/: kernel.h
include/kernel/x86/: common.hpp  kernel.h  optimized.hpp  quantize.hpp
src/common/: file.cpp  utils.cpp
src/core/: device.cpp  graph.cpp  model.cpp  model_imp.cpp  module.cpp  op.cpp  tensor.cpp  thread_pool.cpp
src/graph/: chatGLM.cpp  chatGLM2.cpp  chatGLM3.cpp  graph_imp.cpp
src/kern/: kernel.h
src/kern/gpu/: kernel_gpu.cu
src/kern/naive/: naive.cpp  naive.h
src/kern/optimized/x86/: kernel.cpp  kernel.h  optimized.h
src/kern/x86/: kernel.cpp  kernel.h  optimized.h
src/kernel/cpu/: kernel.cpp
src/kernel/gpu/: kernel.cu
src/kernel/x86/: kernel.cpp
